--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <div class="container">
                 <nav class="nav">
-                    <a href="#"> < HA /> </a>
+                    <a href="#"> < MH /> </a>
                     <ul>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Work</a></li>
@@ -190,9 +190,8 @@
                 <div class="container">
                     <div class="title">
 
-                        <h4>Skills</h4>
-                        <h1>The skills, tools and technologies I am really good
-                            at:</h1>
+                        <h4>Experience</h4>
+                        <h1>Here is a quick summary of my most recent experiences:</h1>
                     </div>
                     <div class="wrapper">
 
@@ -274,12 +273,12 @@
                 <div class="container">
                     <div class="title">
 
-                        <h4>Skills</h4>
-                        <h1>The skills, tools and technologies I am really good
-                            at:</h1>
+                        <h4>Work</h4>
+                        <h1>Some of the noteworthy projects I have built:</h1>
                     </div>
 
                     <div class="wrapper">
+
                         <div class="card">
                             <img src="./images/Uzum1.png" alt="Uzum Market">
                             <div class="card-right">
@@ -333,13 +332,237 @@
                                 </div>
 
                                 <img src="./images/Icon Button.svg" alt="Icon">
-                                    
+
                             </div>
                         </div>
+
+                        <div class="card">
+
+                            <div class="card-right">
+                                <h1>Uzum.uz </h1>
+                                <p>Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Maecenas nec urna ac tellus
+                                    volutpat viverra. Vestibulum ante ipsum
+                                    primis in faucibus orci luctus et ultrices
+                                    posuere cubilia curae.</p>
+
+                                <div class="versions">
+                                    <div>
+                                        <p>Vue.js</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Nuxt.js</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Typescript</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Nest.js</p>
+                                    </div>
+
+                                    <div>
+                                        <p>PostgreSQL</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Tailwindcss</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Figma</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Cypress</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Navie.UI</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Git</p>
+                                    </div>
+                                </div>
+
+                                <img src="./images/Icon Button.svg" alt="Icon">
+
+                            </div>
+
+                            <img src="./images/map.png" alt="Map of Uzb">
+
+                        </div>
+
+                        <div class="card">
+                            <img src="./images/English.png"
+                                alt="Online english course">
+                            <div class="card-right">
+                                <h1>Uzum.uz </h1>
+                                <p>Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Maecenas nec urna ac tellus
+                                    volutpat viverra. Vestibulum ante ipsum
+                                    primis in faucibus orci luctus et ultrices
+                                    posuere cubilia curae.</p>
+
+                                <div class="versions">
+                                    <div>
+                                        <p>Vue.js</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Nuxt.js</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Typescript</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Nest.js</p>
+                                    </div>
+
+                                    <div>
+                                        <p>PostgreSQL</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Tailwindcss</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Figma</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Cypress</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Navie.UI</p>
+                                    </div>
+
+                                    <div>
+                                        <p>Git</p>
+                                    </div>
+                                </div>
+
+                                <img src="./images/Icon Button.svg" alt="Icon">
+
+                            </div>
+                        </div>
+
                     </div>
                 </div>
 
             </section>
+
+            <section id="testimonials">
+                <div class="container">
+
+                    <div class="title">
+
+                        <h4>Testimonials</h4>
+                        <h1>Nice things people have said about me:</h1>
+                    </div>
+
+                    <div class="wrapper">
+
+                        <div class="card">
+                            <img src="./images/icon-avatar.svg" alt="icon-user">
+                            <p>“Job well done! I am really impressed. He is very
+                                very good at what he does:) I would recommend
+                                Sagar and will rehire in the future for Frontend
+                                development.”</p>
+
+                            <div>
+                                <h2>Dilshod Buymurodov</h2>
+                                <a href="#">Founder - Paymart.uz</a>
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+                            <img src="./images/Uzum manager.svg" alt="photo">
+                            <p>“Great guy, highly recommended for any COMPLEX
+                                front-end development job! His skills are
+                                top-notch and he will be an amazing addition to
+                                any team.”</p>
+
+                            <div>
+                                <h2>Djasur Djumaev</h2>
+                                <a href="#">Co-Founder - Uzum.uz</a>
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+                            <img src="./images/icon-avatar.svg" alt="icon-user">
+                            <p>“Mukhriddin was extremely easy and pleasant to
+                                work with and he truly cares about the project
+                                being a success. Mukhriddin has a high level of
+                                knowledge and was able to work on my Full stack
+                                application without any issues.”</p>
+
+                            <div>
+                                <h2>Avaz Aminov</h2>
+                                <a href="#">PM - Solution Lab</a>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </div>
+            </section>
+
+            <section id="getintouch">
+                <div class="container">
+                    <div class="title">
+
+                        <h4>Get in touch</h4>
+                        <h1>Imom Buxoriy bobomizning “Al Jome as sahih”
+                            kitobining eng birinchi hadisi shu hadis bilan
+                            boshlangan: “Innamal a’malu bin niyyati” ya’ni,
+                            “Barcha amallar niyatga bog’liq”.</h1>
+                    </div>
+
+                    <div class="adress">
+
+                        <div class="line">
+                            <i class="bx bx-envelope"></i>
+                            <a href="#">khodievm@gmail.com</a>
+                            <i class="bx bx-copy"></i>
+                        </div>
+
+                        <div class="line">
+                            <i class="bx bx-phone"></i>
+                            <a href="#">+998 99 014 99 98</a>
+                            <i class="bx bx-copy"></i>
+                            
+                        </div>
+                    </div>
+
+                   <div class="socall">
+                    <h3>You may also find me on these platforms!</h3>
+                    <div class="social">
+                        <a href="#"><i class="bx bxl-github"></i></a>
+                        <a href="#"><i class="bx bxl-twitter"></i></a>
+                        <a href="#"><i class='bx bxl-figma'></i></a>
+                    </div>
+                   </div>
+
+                </div>
+            </section>
+
+            <footer>
+                <div class="footer">
+                    <i class="bx bx-copyright"></i>
+                    <p>2023 | Designed and coded with ❤️️ by NAJOT TA’LIM</p>
+                </div>
+            </footer>
 
         </main>
 
