--- a/index.html
+++ b/index.html
@@ -16,18 +16,42 @@
                 <nav class="nav">
                     <a href="#"> < MH /> </a>
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Testimonials</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#footer">Contact</a></li>
                         <p>|</p>
                         <div>
                             <span><i class="bx bx-sun"></i></span>
                             <button>Download CV</button>
                         </div>
                     </ul>
-
                 </nav>
+                <div class="toggle_menu">
+                    <i class="bx bx-menu"></i>
+                </div>
+
+                <div class="sidebar">
+                    <div class="footer">
+                        <a href="#"> < MH /> </a>
+                        <i class="bx bx-x"></i>                        
+                    </div>
+                    
+                    <div class="section">
+                        <ul>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Work</a></li>
+                            <li><a href="#">Testimonials</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        <div class="sun">
+                            <p>Switch Theme</p>
+                            <i class="bx bx-sun"></i>
+                        </div>
+                        <button>Download CV</button>
+                    </div>
+                    
+                </div>
             </div>
         </header>
 
@@ -67,6 +91,7 @@
                         </div>
 
                         <div class="wrapper_right">
+                            <img class="dark" src="./images/Background dark.svg" alt="background">
                             <img class="background"
                                 src="./images/Background first.png"
                                 alt="background">
@@ -557,7 +582,7 @@
                 </div>
             </section>
 
-            <footer>
+            <footer id="footer">
                 <div class="footer">
                     <i class="bx bx-copyright"></i>
                     <p>2023 | Designed and coded with ❤️️ by NAJOT TA’LIM</p>
